# Open-Aerion-Integrated-Management-Platform

./: .gitignore  README.md
backend/: pom.xml
backend/aimp-gateway/: pom.xml
backend/aimp-user/: pom.xml
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: AppHeader.vue  AppSidebar.vue
frontend/src/layouts/: DashboardLayout.vue
frontend/src/router/: index.js
frontend/src/views/: DashboardView.vue  ForgotPasswordView.vue  LoginView.vue  OnlineMapView.vue  RegisterView.vue  RolesView.vue  SettingsView.vue  UsersView.vue
openaimp-backend/: .gitattributes  debug_procedures.py  debug_procedures_v2.py  inspect_data.py  inspect_db.py  inspect_zbaa.py  pom.xml
openaimp-frontend/: components.d.ts  package-lock.json  package.json  vite.config.js
openaimp-frontend/src/: main.js
openaimp-frontend/src/api/: auth.js  config.js  http.js  rbac.js  records.js
openaimp-frontend/src/assets/: main.css
openaimp-frontend/src/components/: AdminSidebar.vue  AppHeader.vue  AppSidebar.vue  BaseSidebar.vue
openaimp-frontend/src/layouts/: AdminLayout.vue
openaimp-frontend/src/router/: index.js
openaimp-fsd/: .gitignore  go.mod  go.sum  openfsd.db-shm  openfsd.db-wal  run-windows.bat
openaimp-fsd/docs/: login-auth.md
openaimp-fsd/fsd/: conn.go  env.go  http_service.go  metar.go  postoffice_test.go  server.go
openaimp-fsd/web/: data.go  env.go  routes.go  server.go
openfsd-patch-for-es-main/: CMakeLists.txt
openfsd-patch-for-es-main/src/: config.h
(+311 files in other folders)
